# classeq

./: .cz.toml  .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  temp.html
docs/book/: 01_basic_usage.md  02_indexation.md  03_prediction.md  README.md  schema.phylo.json  schema.phylo.json.yaml
docs/book/schemas/: annotation.phylo.json  annotation.phylo.json.yaml  priors.yaml
docs/drawio/: classeq.drawio  main-application-flow.drawio
docs/manuscript/assays/bacillus-subtilis-group/supplementary-material/: 01-bsub.sanitized.fasta  02-bsub.sanitized.cutoff80.tree  03-bsub-annotated.sanitized.cutoff80.phylo.json  04-classeq.tar  05-config.yaml  06-phylogeny-replacement.tar.bz2  README.md
docs/manuscript/assays/dothideomycetes-large-subunit-phylogeny/: data-pipeline.drawio
docs/manuscript/assays/dothideomycetes-large-subunit-phylogeny/data/: Pipfile  classeq-outgroups.tsv  clean-headers.py  inout-merged-aligned.fasta  inout-merged-aligned.phy  inout-merged-aligned.tree  inout-merged.fasta
docs/manuscript/assays/dothideomycetes-large-subunit-phylogeny/data/dothideomycetes/: 00-dothideomycetes-taxids.tsv  06-dothideomycetes-large-subunit.without-divertent-sequences_log.txt  06-dothideomycetes-large-subunit.without-divertent-sequences_removed.txt  07-dothideomycetes-large-subunit.crop-ends_log.txt  07-dothideomycetes-large-subunit.crop-ends_removed.txt  (+2 more)
src/: README.md  setup.py
src/classeq/: settings.py
src/classeq/core/domain/dtos/: biopython_wrappers.py  clade.py  kmer_inverse_index.py  msa.py  msa_source_format.py  ordered_tuple.py  prediction_context.py  priors.py  reference_set.py  strand.py  test_kmer_inverse_index.py  train_source.py  tree.py  tree_source_format.py
src/classeq/core/domain/utils/: either.py  entities.py  exceptions.py
src/classeq/core/use_cases/: __init__.py
src/classeq/core/use_cases/build_prediction_context/: __init__.py  errors.py
src/classeq/core/use_cases/format_output_as_tree/: __init__.py
src/classeq/core/use_cases/indexing_phylogeny/: __init__.py  _fetch_clade_specific_kmers.py  _get_terminal_nodes.py  _recursively_fetch_kmers.py
src/classeq/core/use_cases/load_and_sanitize_phylogeny/: __init__.py  collapse_low_supported_nodes.py  parse_and_reroot_tree.py  test.py
src/classeq/core/use_cases/load_fasta_and_count_kmer/: __init__.py  count_kmer_of_single_sequence.py
src/classeq/core/use_cases/load_models_recursively/: __init__.py
src/classeq/core/use_cases/load_sequences_and_count_kmer/: __init__.py  load_sequences_from_file.py  test.py
src/classeq/core/use_cases/load_source_files/: __init__.py  _load_and_sanitize_phylogeny.py  _load_and_sanitize_sequences.py  load_and_sanitize_phylogeny.py  load_and_sanitize_sequences.py  test.py
src/classeq/core/use_cases/persist_models_recursively/: __init__.py
src/classeq/core/use_cases/predict_taxonomies_recursively/: __init__.py  _calculate_clade_adherence.py  _calculate_joining_probability_for_group.py  _calculate_probability_of_group_contains_kmer.py  _do_clade_adherence_test_for_single_sequence.py  _perform_adherence_test_of_child_clades.py  _perform_phylogenetic_adherence_test.py  _perform_phylogenetic_adherence_test_old.py  _perform_single_sequence_phylogenetic_adherence_test.py  calculate_joining_probability_for_group.py  do_clade_adherence_test_for_single_sequence.py  estimate_kmer_specific_priors.py  perform_phylogenetic_adherence_test.py  perform_phylogenetic_adherence_test_old.py  test.py
src/classeq/core/use_cases/shared/: fetch_kmers_indices.py  resolve_path_name.py
src/classeq/core/use_cases/train_from_single_phylogeny/: __init__.py  _calculate_recursive_priors.py  _estimate_clade_kmer_specific_priors.py  _estimate_clade_specific_priors.py  _get_terminal_nodes.py  calculate_single_kmer_likelihood.py  do_one_to_others_train_strategy.py  estimate_clade_kmer_specific_priors.py  estimate_clade_specific_conditional_probabilities.py  estimate_clade_specific_priors.py  estimate_clade_specific_priors_old.py  estimate_global_kmer_specific_priors.py  extract_train_elements.py  test.py  train_one_to_others_strategy.py
src/classeq/core/use_cases/validate_and_load_sequences/: __init__.py  count_kmer_of_single_sequence.py  test.py
src/classeq/ports/api/: main.py
src/classeq/ports/app/: main.py  settings.py
src/classeq/ports/app/assets/: dark.qss
src/classeq/ports/cli/: decorators.py  main.py
src/tests/integration/loading-test/: loader.py
src/tests/manual-validation/: Colletotrichum_acutatum_gapdh.sanitized.train-source.json  ingroup_nodes_map.tsv  kmers_map.tsv  linear_tree.tsv  main.py
src/tests/mock/blast-results/: Col_godetiae_CBS_129951.fasta  Col_scovillei_CBS_126529.fasta
src/tests/mock/colletotrichum-acutatom-complex/inputs/: Colletotrichum_acutatum_gapdh_gapsfree.json  outgroups  outgroups.fasta
src/tests/mock/colletotrichum-acutatom-complex/outputs/: Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.newick  Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.phylo.json  Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.reference-set.k16.json  Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.reference-set.k32.json  Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.train-source.json  Colletotrichum_acutatum_gapdh-PhyML.sanitized.cutoff70.tree
src/tests/mock/prediction-server-init/: config.yaml
(+56 files in other folders)
