# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "classeq"
version = "0.1.0"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
description = "A phylogeneny based classifier of DNA sequences"
requires-python = ">=3.11"
keywords = ["Machine Learning", "Bioinformatics", "Phylogeny"]
classifiers = ["Programming Language :: Python :: 3.11"]

# ? ----------------------------------------------------------------------------
# ? Entrypoints
# ? ----------------------------------------------------------------------------

# [project.scripts]

# The CLI entrypoint
#cls="cls.ports.cli.main:classeq_cmd"

# ? ----------------------------------------------------------------------------
# ? Assets
# ? ----------------------------------------------------------------------------

# Remove hashtag if non python files should be included at the installation
# files.
#
#[tool.setuptools.package-data]
#classeq = ["assets/*.tsv.gz"]

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]
python_version = 3.11
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = "True"
follow_imports  = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "False"
namespace_packages = "False"
disallow_untyped_defs = "True"

[tool.attrs-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"

[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore="**/__init__.py: F401"
