[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]

name = "classeq"
version = "0.12.3"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
description = "A phylogeneny based classifier of DNA sequences"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

keywords = ["Machine Learning", "Bioinformatics", "Phylogeny"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


[project.scripts]

cls = "classeq.ports.cli.main:classeq_cmd"


[tool.mypy]
python_version = 3.11
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = "True"
follow_imports = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "False"
namespace_packages = "False"
disallow_untyped_defs = "True"

[tool.attrs-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"

[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore = "**/__init__.py: F401"
